<resources>
    <string name="app_name">Nav Drawer</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="cycling">Cycling</string>
    <string name="bus">Bus</string>
    <string name="plane">Plane</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open</string>
    <string name="close_nav">Close</string>
</resources>